--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <h1>Books</h1>
-    <table border="1" id="books">
-  
-    </table>
-    <script type="module" src="index.js"></script>
+    <header>
+      <h1>Baran<span class="Manti-text">Manti</span></h1>
+      <p class="tag">Student | Engineer</p>
+      <p class="discover">Discover More</p>
+      <div class="arrow down"><div></div></div>
+      <nav>
+        <ul>
+            <li><a href="about.html">About Me</a></li>
+            <li><a href="education.html">Education</a></li>
+            <li><a href="experience.html">Experience</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </header>
+
   </body>
 </html>
