--- a/index.html
+++ b/index.html
@@ -4,24 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Baran Manti</title>
     <link rel="stylesheet" href="screen.css">
   </head>
   <body>
-    <header>
-      <h1>Baran<span class="Manti-text">Manti</span></h1>
-      <p class="tag">Student | Engineer</p>
-      <p class="discover">Discover More</p>
-      <div class="arrow down"><div></div></div>
-      <nav>
-        <ul>
-            <li><a href="about.html">About Me</a></li>
-            <li><a href="education.html">Education</a></li>
-            <li><a href="experience.html">Experience</a></li>
-            <li><a href="contact.html">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-
+    <main>
+      <section id="home">
+        <div class="name">
+          <h1>Baran<span class="Manti-text">Manti</span></h1>
+          <p class="tag">Student | Engineer</p>
+        </div>
+        <nav>
+          <ul>
+              <li><a href="about.html">About Me</a></li>
+              <li><a href="education.html">Education</a></li>
+              <li><a href="experience.html">Experience</a></li>
+              <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="discover">
+          <p class="discover-more">Discover More</p>
+          <div class="arrow"><div></div></div>
+        </div>
+      </section>
+      <section id="body">
+        <section id="about">
+          <h2>About Us</h2>
+          <p>This is the about section.</p>
+        </section>
+        <section id="education">
+          <h2>Education</h2>
+          <p>This is the education section.</p>
+        </section>
+        <section>
+          <h2>Experience</h2>
+          <p>This is the experience section.</p>
+        </section>
+        <section>
+          <h2>Contact</h2>
+          <p>This is the Contact section.</p>
+        </section>
+      </section>
+    </main>
   </body>
 </html>
