--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <div class="about-me">
             <h2>Hey there! I'm <span class="my-name">Baran Manti</span></h2>
             <div class="desc">
-              <p>An aspiring, 22 years old Computer Science <span class="enthusiast">enthusiast</span> currently pursuing a Bachelor of Science at Michigan State University. I'm half Turkish and half Montenegrin. I love traveling and discovering new places. Driven by curiosity and a <span class="passion">passion</span> for programming, I've had experience with various realms of technology, including hands-on experience in software and systems engineering, web development, and more!</p>
+              <p>An aspiring, 22 years old Computer Science <span class="enthusiast">enthusiast</span> currently pursuing a Bachelor of Science at Michigan State University as a senior. I'm half Turkish and half Montenegrin. I love traveling and discovering new places. Driven by curiosity and a <span class="passion">passion</span> for programming, I've had experience with various realms of technology, including hands-on experience in software and systems engineering, web development, and more!</p>
               <p>On the <span class="profes">professional</span> side, I've been working as a Systems Engineer at i3 Verticals for over a year and a half. I have experience in Azure web applications, .NET, SQL, OnBase and many other industry-leading technologies.</p>
             </div>
           </div>
